--- a/public/locales/de/common.json
+++ b/public/locales/de/common.json
@@ -40,16 +40,20 @@
             "title": "Über Uns",
             "swiper": [
                 {
-                    "title": "Aus Europa. Für Europa.",
-                    "content": "AirZen stellt modernste Netzwerk Technologie in der Schweiz & Europa her. Sicheres WLAN – entwickelt für individuelle Anforderungen und mit hoher Anwenderfreundlichkeit. Der eigenen Herkunft verpflichtet, hilft AirZen allen Kunden dabei mit aktuellen Datenschutz- und Security-Richtlinien Schritt zu halten."
+                    "title": "Aus Europa. Für Europa.",
+                    "content": "AirZen stellt modernste Netzwerk Technologie in Europa her. Sicheres WLAN - entwickelt für individuelle Anforderungen und hoher Anwenderfreundlichkeit. Der eigenen Herkunft verpflichtet, hilft AirZen allen Kunden dabei mit den aktuellen Datenschutz- und Security-Richtlinien Schritt zu halten"
                 },
                 {
-                    "title": "Aus Europa. Für Europa.",
-                    "content": "AirZen stellt modernste Netzwerk Technologie in der Schweiz & Europa her. Sicheres WLAN – entwickelt für individuelle Anforderungen und mit hoher Anwenderfreundlichkeit. Der eigenen Herkunft verpflichtet, hilft AirZen allen Kunden dabei mit aktuellen Datenschutz- und Security-Richtlinien Schritt zu halten."
+                    "title": "Unsere Stärke. Ihr Schutz.",
+                    "content": "Jedes Unternehmen ist einzigartig. Daher müssen es die Netzwerklösungen auch sein. AirZen maximiert Sicherheit mit maßgeschneiderten WLAN-Lösungen auf der Grundlage von Security by Design und reduziert die Komplexität der IT für alle Anwender:innen."
                 },
                 {
-                    "title": "Aus Europa. Für Europa.",
-                    "content": "AirZen stellt modernste Netzwerk Technologie in der Schweiz & Europa her. Sicheres WLAN – entwickelt für individuelle Anforderungen und mit hoher Anwenderfreundlichkeit. Der eigenen Herkunft verpflichtet, hilft AirZen allen Kunden dabei mit aktuellen Datenschutz- und Security-Richtlinien Schritt zu halten."
+                    "title": "Einer für alle und alles bei Einem.",
+                    "content": "AirZen ist nicht nur IT-Hersteller, sondern vielmehr ganzheitlicher IT-Partner. Von der Entwicklung, Produktion und Betreuung bietet AirZen eigene, passgenaue WLAN-Lösungen für Unternehmen aller Branchen sowie  öffentliche Einrichtungen - und das alles aus einer Hand."
+                },
+                {
+                    "title": "Immer Besser.",
+                    "content": "Die AirZen Netzwerklösungen sind so konzipiert, dass sie außergewöhnlich einfach zu installieren sind, sicheren WLAN-Zugang bieten und die Zuverlässigkeit liefern, welche für digitale Arbeitsplätze nötig ist. Dabei bildet die AirZen Technologie ein flexibles Fundament, das sich kontinuierlich weiterentwickelt und neue Angebote bietet."
                 }
             ],
             "sparkle1": "Dieses Feature ermöglicht eine besondere Funktion: XYZ",
