--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -41,15 +41,19 @@
             "swiper": [
                 {
                     "title": "From Europe. For Europe.",
-                    "content": "AirZen manufactures the most modern network technology in Switzerland & Europe. Secure WLAN - developed for individual requirements and with a high level of user-friendliness. Committed to its origins, AirZen helps all customers to keep up with current data protection and security guidelines."
+                    "content": "AirZen manufactures the most modern network technology in Europe. Secure WLAN - developed for individual requirements and high user-friendliness. Committed to its origins, AirZen helps all customers to keep up with the latest data protection and security guidelines"
                 },
                 {
-                    "title": "From Europe. For Europe.",
-                    "content": "AirZen manufactures the most modern network technology in Switzerland & Europe. Secure WLAN - developed for individual requirements and with a high level of user-friendliness. Committed to its origins, AirZen helps all customers to keep up with current data protection and security guidelines."
+                    "title": "Our strength. your protection.",
+                    "content": "Every company is unique. Therefore, the network solutions must be too. AirZen maximizes security with tailor-made WiFi solutions based on Security by Design and reduces IT complexity for all users."
                 },
                 {
-                    "title": "From Europe. For Europe.",
-                    "content": "AirZen manufactures the most modern network technology in Switzerland & Europe. Secure WLAN - developed for individual requirements and with a high level of user-friendliness. Committed to its origins, AirZen helps all customers to keep up with current data protection and security guidelines."
+                    "title": "One for all and all in one.",
+                    "content": "AirZen is not only an IT manufacturer, but rather a holistic IT partner. From development, production and support, AirZen offers its own tailor-made WLAN solutions for companies in all sectors as well as public institutions - all from a single source."
+                },
+                {
+                    "title": "Better and better.",
+                    "content": "AirZen networking solutions are designed to be exceptionally easy to install, provide secure WiFi access, and deliver the reliability required for digital workspaces. The AirZen technology forms a flexible foundation that is continuously being developed and offers new offers."
                 }
             ],
             "sparkle1": "This feature enables a special function: XYZ",
