--- a/public/locales/de/common.json
+++ b/public/locales/de/common.json
@@ -85,7 +85,7 @@
             "description": "Ich habe die \nDatenschutz- erklärung\n gelesen und stimme der Speicherung und Verarbeitung meiner Daten durch die AirZen Networks Lda zu. \n Ich willige ein, dass meine Daten zur Beantwortung meiner Anfrage elekronisch erhoben und gespeichert werden. Ich kann meine Einwilligung jederzeit widerrufen: privacy@airzen.io ",
             "href": "https://www.plume.com/de-DE/legal/"
         },
-        "menu": "Lösungen \n Über uns \n Referezen \n Kontakt"
+        "menu": "Lösungen \n Über uns \n Referenzen \n Kontakt"
     },
     "home": {
         "simply": {
