--- a/public/locales/de/common.json
+++ b/public/locales/de/common.json
@@ -569,27 +569,52 @@
     },
     "footer": {
         "title": "Impressum",
-        "inprint": [
+        "legal": 
             {
-                "title": "AirZen Networks Lda.",
-                "description": "Avenida Arriaga, nº30, 1ºA \n 9000-064 Funchal, Portugal",
-                "subdes": "VAT: PT516672169"
-            }
-        ],
-        "readmore": [
-            {
-                "title": "Haftungsbeschränkung",
-                "content": "Die Inhalte dieser Website werden mit größtmöglicher Sorgfalt erstellt. Der Anbieter übernimmt jedoch keine Gewähr für die Richtigkeit, Vollständigkeit und Aktualität der bereitgestellten Inhalte. Die Nutzung der Inhalte der Website erfolgt auf eigene Gefahr des Nutzers. Namentlich gekennzeichnete Beiträge geben die Meinung des jeweiligen Autors und nicht immer die Meinung des Anbieters wieder. Mit der reinen Nutzung der Website des Anbieters kommt keinerlei Vertragsverhältnis zwischen dem Nutzer und dem Anbieter zustande."
+                "title": "Legal",
+                "description": [
+                    "AirZen Networks Lda.",
+                    "Avenida Arriaga, nº30, 1ºA",
+                    "9000-064 Funchal, Portugal",
+                    "VAT: PT516672169"
+                ],
+                "readmore": "alle rechtlichen Hinweise",
+                "subdesc": "Nachfolgend finden Sie eine Auswahl aller Dokumente & Formulare.",
+                "links": [
+                    "Kontakformular",
+                    "Allgemeine Geschäftsbedingungen",
+                    "Gast-WLAN Nutzungsbedingungen",
+                    "Datenschutzbestimmungen",
+                    "Cloud-Service Vereinbarung",
+                    "Endnutzer-Lizenvertrag",
+                    "Verkaufsbedingungen",
+                    "Website-Nutzungsbedingungen",
+                    "Cookie-Richtlinie",
+                    "Löschantrag",
+                    "Newsletter abmelden",
+                    "DSGVO-Daten anfordern",
+                    "Bug-Bounty",
+                    "Behörden"
+                ]
             },
+        "partner": 
             {
-                "title": "Externe Links",
-                "content": "Diese Website enthält Verknüpfungen zu Websites Dritter ('externe Links'). Diese Websites unterliegen der Haftung der jeweiligen Betreiber. Der Anbieter hat bei der erstmaligen Verknüpfung der externen Links die fremden Inhalte daraufhin überprüft, ob etwaige Rechtsverstöße bestehen. Zu dem Zeitpunkt waren keine Rechtsverstöße ersichtlich. Der Anbieter hat keinerlei Einfluss auf die aktuelle und zukünftige Gestaltung und auf die Inhalte der verknüpften Seiten. Das Setzen von externen Links bedeutet nicht, dass sich der Anbieter die hinter dem Verweis oder Link liegenden Inhalte zu Eigen macht. Eine ständige Kontrolle der externen Links ist für den Anbieter ohne konkrete Hinweise auf Rechtsverstöße nicht zumutbar. Bei Kenntnis von Rechtsverstößen werden jedoch derartige externe Links unverzüglich gelöscht."
+                "title": "Partner-Bereich",
+                "description": [
+                    "AirZen ist Team-Work.",
+                    "Sie möchten als IT-Partner AirZen für Ihre Kunden anbieten? Hier entlang."
+                ],
+                "readmore": "Mehr erfahren"                
             },
+        "newsletter": 
             {
-                "title": "Urheber- und Leistungsschutzrechte",
-                "content": "Die auf dieser Website veröffentlichten Inhalte unterliegen dem deutschen Urheber- und Leistungsschutzrecht. Jede vom deutschen Urheber- und Leistungsschutzrecht nicht zugelassene Verwertung bedarf der vorherigen schriftlichen Zustimmung des Anbieters oder jeweiligen Rechteinhabers. Dies gilt insbesondere für Vervielfältigung, Bearbeitung, Übersetzung, Einspeicherung, Verarbeitung bzw. Wiedergabe von Inhalten in Datenbanken oder anderen elektronischen Medien und Systemen. Inhalte und Rechte Dritter sind dabei als solche gekennzeichnet. Die unerlaubte Vervielfältigung oder Weitergabe einzelner Inhalte oder kompletter Seiten ist nicht gestattet und strafbar. Lediglich die Herstellung von Kopien und Downloads für den persönlichen, privaten und nicht kommerziellen Gebrauch ist erlaubt. Die Darstellung dieser Website in fremden Frames ist nur mit schriftlicher Erlaubnis zulässig."
+                "title": "Newsletter",
+                "description": [
+                    "Neugierig?",
+                    "Erhalten Sie unseren Newsletter maximal einmal pro Monat!"
+                ],
+                "readmore": "jetzt abnonieren"                
             }
-        ]
     },
     "cookie": {
         "accept": "Cookies akzeptieren",
